force-app/main/default/objects/Ticket__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>Header</label>
    <referenceTo>Header__c</referenceTo>
    <relationshipLabel>Ticket</relationshipLabel>
    <relationshipName>Ticket</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>