force-app/main/default/objects/Ticket__c/fields/Prior_status__c.field-meta.xml
<CustomField>
    <fullName>Prior_status__c</fullName>
    <label>Prior status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>