force-app/main/default/objects/Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>