force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Header__c</columns>
    <columns>Prior_status__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>